--- a/index.html
+++ b/index.html
@@ -16,9 +16,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <style> body{ font-family: Inter, ui-sans-serif, system-ui; } </style>
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-52K4L2DJ');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body class="bg-dark text-white antialiased">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-52K4L2DJ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <!-- Top bar -->
   <header class="border-b border-white/10">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 flex items-center justify-between py-4">
@@ -72,7 +85,7 @@
         <h2 class="text-xl font-bold">Book a Strategy Call</h2>
         <p class="mt-1 text-sm text-white/70">Only for funded founders or teams actively raising.</p>
 
-        <form id="leadForm" class="mt-6 grid grid-cols-1 gap-4" action="#" method="post" onsubmit="return validateBudget()">
+        <form id="leadForm" class="mt-6 grid grid-cols-1 gap-4" action="https://formspree.io/f/xzzklqpq" method="POST" onsubmit="return validateBudget()">
           <!-- Honeypot -->
           <input type="text" name="company_website" class="hidden" tabindex="-1" autocomplete="off">
 
@@ -133,7 +146,7 @@
 
           <label class="block">
             <span class="text-sm text-white/80">Company URL</span>
-            <input required name="url" type="url" class="mt-1 w-full rounded-md border border-white/10 bg-dark px-3 py-2 text-white placeholder-white/40 focus:border-brand focus:outline-none" placeholder="https://startup.com" />
+            <input required name="url" type="text" class="mt-1 w-full rounded-md border border-white/10 bg-dark px-3 py-2 text-white placeholder-white/40 focus:border-brand focus:outline-none" placeholder="startup.com" />
           </label>
 
           <label class="block">
@@ -262,6 +275,7 @@
   <!-- Simple budget validation -->
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
+
     function validateBudget(){
       const b = document.getElementById('budget').value;
       const warn = document.getElementById('budgetWarn');
@@ -272,8 +286,33 @@
         return false; // hard-filter budgets below floor
       }
       warn.classList.add('hidden');
-      alert('Form submitted. Hook this up to your form handler or CRM.');
-      return false; // prevent actual submit until you wire it up
+
+      // Submit form via AJAX to avoid Formspree redirect
+      const form = document.getElementById('leadForm');
+      const formData = new FormData(form);
+
+      fetch(form.action, {
+        method: 'POST',
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      }).then(response => {
+        if (response.ok) {
+          // Show thank you message
+          alert('Thank you! We\'ll be in touch within 24 hours to schedule your strategy call.');
+          // Redirect to main site
+          window.location.href = 'https://pitchdeckwriter.com';
+        } else {
+          alert('Thanks for submitting! We\'ll be in touch soon.');
+          window.location.href = 'https://pitchdeckwriter.com';
+        }
+      }).catch(error => {
+        alert('Thanks for submitting! We\'ll be in touch soon.');
+        window.location.href = 'https://pitchdeckwriter.com';
+      });
+
+      return false; // prevent default form submission
     }
   </script>
 
