--- a/premium-landing.html
+++ b/premium-landing.html
@@ -88,6 +88,9 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-52K4L2DJ');</script>
   <!-- End Google Tag Manager -->
+
+  <!-- Vercel Analytics -->
+  <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </head>
 
 <body class="bg-midnight text-white antialiased">
