--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
             </label>
 
             <label class="block">
+              <span class="text-sm font-medium text-white/80">Phone (Optional)</span>
+              <input name="phone" type="tel" class="mt-1 w-full rounded-md border border-white/10 bg-dark px-3 py-2.5 text-white placeholder-white/40 focus:border-brand focus:outline-none focus:ring-1 focus:ring-brand" placeholder="(555) 123-4567" />
+              <span class="text-xs text-white/50 mt-1.5 block">For faster responses</span>
+            </label>
+
+            <label class="block">
               <span class="text-sm font-medium text-white/80">Funding Stage *</span>
               <select required name="fundingStage" class="mt-1 w-full rounded-md border border-white/10 bg-dark px-3 py-2.5 text-white focus:border-brand focus:outline-none focus:ring-1 focus:ring-brand">
                 <option value="">Select...</option>
